# neotec-mis

./: MANIFEST.in  README.md  pyproject.toml  setup.py
neotec_mis/: hooks.py  modules.txt  neotec_mis.py
neotec_mis/config/: desktop.py
neotec_mis/doctype/mis_flag/: mis_flag.json  mis_flag.py
neotec_mis/doctype/mis_flag_account/: mis_flag_account.json  mis_flag_account.py
neotec_mis/doctype/mis_report_format/: mis_report_format.json  mis_report_format.py
neotec_mis/doctype/mis_report_line/: mis_report_line.json  mis_report_line.py
neotec_mis/doctype/mis_report_line_flag/: mis_report_line_flag.json
neotec_mis/neotec_mis_builder/doctype/mis_flag/: mis_flag.json
neotec_mis/neotec_mis_builder/doctype/mis_flag_account/: mis_flag_account.json
neotec_mis/neotec_mis_builder/doctype/mis_report_format/: mis_report_format.json
neotec_mis/neotec_mis_builder/doctype/mis_report_line/: mis_report_line.json
neotec_mis/neotec_mis_builder/doctype/mis_report_line_flag/: mis_report_line_flag.json  mis_report_line_flag.py
neotec_mis/neotec_mis_builder/report/neotec_mis_report/: neotec_mis_report.js  neotec_mis_report.json  neotec_mis_report.py
neotec_mis/neotec_mis_builder/role/: neotec_mis_admin.json  neotec_mis_user.json
neotec_mis/report/neotec_mis_report/: neotec_mis_report.json
